fixed the text align for the details page

--- a/server/public/css/custom.css
+++ b/server/public/css/custom.css
@@ -1,3 +1,8 @@
+.textContent p, .textContent {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
 .titleColor {
 	color: #ff830a !important;
 	margin: auto;
